--- a/ExampleApp/package.json
+++ b/ExampleApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Exemple",
+  "name": "example-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,19 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.11.0",
-    "react-native": "0.62.2",
-    "react-native-jitsi-meet": "^2.1.1"
+    "react": "17.0.2",
+    "react-native": "0.68.3",
+    "react-native-jitsi-meet": "https://github.com/concent-solutions/react-native-jitsi-meet.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^6.5.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.11.0"
+    "jest": "^26.6.3",
+    "jetifier": "^2.0.0",
+    "metro-react-native-babel-preset": "^0.67.0",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
