--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "description": "Jitsi Meet SDK wrapper for React Native.",
   "version": "2.3.1",
   "author": {
-    "name": "Sébastien Krafft",
+    "name": "Sébastien Krafft,",
     "email": "skrafft@gmail.com"
   },
   "contributors": [
+    {
+      "name": "Shashwat Singh",
+      "email": "shashwat@concent.in"
+    }
   ],
   "homepage": "https://github.com/skrafft/react-native-jitsi-meet",
   "bugs": {
@@ -24,7 +28,8 @@
     "native",
     "react",
     "react-native",
-    "react-native-component"
+    "react-native-component",
+    "react-native-jitsi-meet-concent"
   ],
   "license": "Apache-2.0",
   "main": "index",
